# rerp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .sops.yaml  AGENT.md  AGENTS.md  CLIPPY_DECIMAL_FIXES.md  CONTRIBUTING.md  Cargo.toml  HAULIAGE_TILTFILE_REFERENCE.md  LICENSE  README.md  RERP_MUSINGS.md  Tiltfile  commitlint.config.mjs  fix_crm_201.py  fix_crm_201b.py  fix_crm_204.py  fix_crm_400.py  fix_crm_401.py  fix_crm_404.py  fix_crm_brrtrouter.py  fix_crm_descriptions.py  fix_crm_examples.py  fix_crm_examples2.py  fix_crm_extensions.py  fix_crm_external_docs.py  fix_crm_final.py  fix_crm_final_audit.py  fix_crm_inline_examples.py  fix_crm_param_desc.py  fix_crm_remaining.py  fix_crm_request_body_desc.py  fix_crm_request_examples.py  fix_crm_response_codes_all.py  fix_crm_response_codes_final.py  fix_crm_response_examples.py  fix_crm_schema_desc.py  fix_crm_schema_desc2.py  fix_crm_schema_descriptions.py  (+7 more)
components/: Cargo.toml  README.md  SETUP_COMPLETE.md  STRUCTURE.md
components/accounting/accounts-payable/: Cargo.toml
components/accounting/accounts-payable_impl/: Cargo.toml
components/accounting/accounts-receivable/: Cargo.toml
components/accounting/accounts-receivable_impl/: Cargo.toml
components/accounting/asset/: Cargo.toml
components/accounting/asset_impl/: Cargo.toml
components/accounting/bank-sync/: Cargo.toml
components/accounting/bank-sync_impl/: Cargo.toml
components/accounting/budget/: Cargo.toml
components/accounting/budget_impl/: Cargo.toml
components/accounting/edi/: Cargo.toml
components/accounting/edi_impl/: Cargo.toml
components/accounting/financial-reports/: Cargo.toml
components/accounting/financial-reports_impl/: Cargo.toml
components/accounting/general-ledger/: Cargo.toml
components/accounting/general-ledger_impl/: Cargo.toml
components/accounting/invoice/: Cargo.toml
components/accounting/invoice_impl/: Cargo.toml
components/ai/core/: Cargo.toml
components/ai/core_impl/: Cargo.toml
components/ai/document/: Cargo.toml
components/ai/document_impl/: Cargo.toml
components/analytics/bi/: Cargo.toml
components/analytics/bi_impl/: Cargo.toml
components/analytics/dashboards/: Cargo.toml
components/analytics/dashboards_impl/: Cargo.toml
components/analytics/reporting/: Cargo.toml
components/analytics/reporting_impl/: Cargo.toml
components/appointments/core/: Cargo.toml
components/appointments/core_impl/: Cargo.toml
components/approvals/core/: Cargo.toml
components/approvals/core_impl/: Cargo.toml
components/auth/idam/: Cargo.toml
components/auth/idam_impl/: Cargo.toml
components/auth/rbac/: Cargo.toml
components/auth/rbac_impl/: Cargo.toml
components/automation/core/: Cargo.toml
components/automation/core_impl/: Cargo.toml
components/common/: Cargo.toml
components/common/src/: error.rs  lib.rs  utils.rs  validation.rs
components/crm/automation/: Cargo.toml
components/crm/automation_impl/: Cargo.toml
components/crm/core/: Cargo.toml
components/crm/core_impl/: Cargo.toml
components/crm/livechat/: Cargo.toml
components/crm/livechat_impl/: Cargo.toml
components/data/cleaning/: Cargo.toml
components/data/cleaning_impl/: Cargo.toml
components/documents/core/: Cargo.toml
components/documents/core_impl/: Cargo.toml
components/esg/core/: Cargo.toml
components/esg/core_impl/: Cargo.toml
components/field-service/core/: Cargo.toml
components/field-service/core_impl/: Cargo.toml
components/helpdesk/core/: Cargo.toml
components/helpdesk/core_impl/: Cargo.toml
components/helpdesk/knowledge-base/: Cargo.toml
components/helpdesk/knowledge-base_impl/: Cargo.toml
components/hr/appraisal/: Cargo.toml
components/hr/appraisal_impl/: Cargo.toml
components/hr/attendance/: Cargo.toml
components/hr/attendance_impl/: Cargo.toml
components/hr/core/: Cargo.toml
components/hr/core_impl/: Cargo.toml
components/hr/leave/: Cargo.toml
components/hr/leave_impl/: Cargo.toml
components/hr/payroll/: Cargo.toml
components/hr/payroll_impl/: Cargo.toml
components/hr/recruitment/: Cargo.toml
components/hr/recruitment_impl/: Cargo.toml
components/hr/skills/: Cargo.toml
components/hr/skills_impl/: Cargo.toml
components/infrastructure/gateway/: Cargo.toml
components/infrastructure/gateway_impl/: Cargo.toml
components/infrastructure/integration-platform/: Cargo.toml
components/infrastructure/integration-platform_impl/: Cargo.toml
components/inventory/core/: Cargo.toml
components/inventory/core_impl/: Cargo.toml
components/inventory/dropshipping/: Cargo.toml
components/inventory/dropshipping_impl/: Cargo.toml
components/inventory/logistics/: Cargo.toml
components/inventory/logistics_impl/: Cargo.toml
components/inventory/warehouse/: Cargo.toml
components/iot/core/: Cargo.toml
entities/: Cargo.toml  README.md  build.rs
entities/src/: lib.rs
microservices/: Cargo.toml
microservices/accounting/: README.md
microservices/migrator/: Cargo.toml
tooling/: BRRTRouter_AUDIT.md  BRRTRouter_OPTION_B_DESIGN.md  BRRTRouter_RERP_AUDIT.md  README.md  pyproject.toml
tooling/scripts/: __init__.py  check_doc_governance.py
tooling/tests/: __init__.py  conftest.py  test_accounting_database_ownership.py  test_accounting_deployment_acceptance.py  test_bff_generate_system.py  test_bootstrap_microservice.py  test_build_host_aware.py  test_ci_fix_cargo_paths.py  test_ci_get_latest_tag.py  test_ci_is_tag.py  test_ci_patch_brrtrouter.py  test_ci_validate_version.py  test_cli.py  test_discovery.py  test_discovery_services.py  test_discovery_sources.py  test_doc_governance.py  test_docker_build_base.py  test_docker_build_image_simple.py  test_docker_build_multiarch.py  test_docker_copy_artifacts.py  test_docker_copy_binary.py  test_docker_copy_multiarch.py  test_docker_generate_dockerfile.py  test_docker_render_dockerfile.py  test_docker_unpack_build_bins.py  test_openapi_fix_operation_id.py  test_openapi_validate.py  test_ports.py  test_release_bump.py  test_release_notes.py  test_rerp_cli_translations.py  test_runtime.py  test_tilt.py
(+2268 files in other folders)
