[package]
name = "rerp-entities"
version = "0.1.3"
edition = "2021"
description = "RERP accounting domain entities using Lifeguard ORM"
authors = ["RERP Team <dev@rerp.io>"]
license = "MIT OR Apache-2.0"
build = "build.rs"

[build-dependencies]
lifeguard-migrate = { path = "../../lifeguard/lifeguard-migrate", version = "0.1.0" }

[dependencies]
# Lifeguard ORM
lifeguard = { path = "../../lifeguard", version = "0.1.0" }
lifeguard-derive = { path = "../../lifeguard/lifeguard-derive", version = "0.1.0" }
lifeguard-migrate = { path = "../../lifeguard/lifeguard-migrate", version = "0.1.0" }

# Standard dependencies for entities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-query = { version = "1.0.0-rc.29", features = ["with-json"] }

[lib]
name = "rerp_entities"
path = "src/lib.rs"

[[bin]]
name = "generate-migrations"
path = "src/bin/generate_migrations.rs"

[[bin]]
name = "generate-sql"
path = "src/bin/generate_sql.rs"
