[workspace]
members = [
    # Common utilities (to be created when needed)
    # "accounting/common",
    
    # Generated library crates (gen/) and implementation binary crates (impl/)
    "accounting/general-ledger/gen",
    "accounting/general-ledger/impl",
    "accounting/invoice/gen",
    "accounting/invoice/impl",
    "accounting/accounts-receivable/gen",
    "accounting/accounts-receivable/impl",
    "accounting/accounts-payable/gen",
    "accounting/accounts-payable/impl",
    "accounting/bank-sync/gen",
    "accounting/bank-sync/impl",
    "accounting/asset/gen",
    "accounting/asset/impl",
    "accounting/budget/gen",
    "accounting/budget/impl",
    "accounting/edi/gen",
    "accounting/edi/impl",
    "accounting/financial-reports/gen",
    "accounting/financial-reports/impl",
    "accounting/bff/gen",
    "accounting/bff/impl",
]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2021"

[workspace.dependencies]
# BRRTRouter: default-features = false so arm7 cross build does not pull in jemalloc (__ffsdi2 link error)
brrtrouter = { path = "../../BRRTRouter", default-features = false }
brrtrouter_macros = { path = "../../BRRTRouter/brrtrouter_macros" }

# Lifeguard ORM
lifeguard = { path = "../../lifeguard" }
lifeguard-derive = { path = "../../lifeguard/lifeguard-derive" }
rerp_entities = { path = "../entities" }

# Standard dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
config = "0.14"
http = "1.0"
may = "0.3"
may_minihttp = "0.1"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tikv-jemallocator = { version = "0.5", features = ["profiling"] }

# Database
may-postgres = "0.1"
rust_decimal = "1.33"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
