[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rerp-tooling"
version = "0.1.0"
description = "Thin shim: `rerp` CLI is implemented in brrtrouter-tooling (`brrtrouter_tooling.workspace`)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Path from rerp/tooling → microscaler/BRRTRouter/tooling
    "brrtrouter-tooling @ file:///home/casibbald/Workspace/microscaler/BRRTRouter/tooling",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "pre-commit>=3.0",
]

[project.scripts]
rerp = "rerp_tooling.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py39"
line-length = 100
exclude = [".venv", "__pycache__", "build", "dist", "*.egg-info", ".git"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
