[package]
name = "rerp_accounting_asset_impl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "asset"
path = "src/main.rs"
doc = false

[dependencies]
rerp_accounting_asset = { path = "../asset" }
brrtrouter = { workspace = true }
brrtrouter_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tikv-jemallocator = { workspace = true }
rerp_common = { path = "../../common" }

# Add your additional dependencies here
