[package]
name = "rerp_accounting_bank_sync_impl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bank_sync"
path = "src/main.rs"
doc = false

[dependencies]
rerp_accounting_bank_sync = { path = "../bank-sync" }
brrtrouter = { workspace = true }
brrtrouter_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tikv-jemallocator = { workspace = true }
rerp_common = { path = "../../common" }

# Add your additional dependencies here
