[package]
name = "rerp_accounting_budget_impl"
version = "0.1.2"
edition = "2021"

[[bin]]
name = "budget"
path = "src/main.rs"
doc = false

[dependencies]
rerp_accounting_budget = { path = "../budget" }
brrtrouter = { workspace = true }
brrtrouter_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tikv-jemallocator = { workspace = true }
rerp_common = { path = "../../common" }

# Add your additional dependencies here
