[package]
name = "rerp_analytics_reporting_impl"
version = "0.1.3"
edition = "2021"

[[bin]]
name = "reporting"
path = "src/main.rs"
doc = false

[dependencies]
rerp_analytics_reporting = { path = "../reporting" }
brrtrouter = { workspace = true }
brrtrouter_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tikv-jemallocator = { workspace = true }
rerp_common = { path = "../../common" }

# Add your additional dependencies here
