[package]
name = "rerp_crm_automation_impl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "automation"
path = "src/main.rs"

[dependencies]
rerp_crm_automation = { path = "../automation" }
brrtrouter = { workspace = true }
brrtrouter_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tikv-jemallocator = { workspace = true }
rerp_common = { path = "../../common" }

# Add your additional dependencies here
