[package]
name = "rerp_crm_livechat"
version = "0.1.1"
edition = "2021"

[dependencies]
brrtrouter = { workspace = true }
brrtrouter_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
config = { workspace = true }
http = { workspace = true }
may = { workspace = true }
may_minihttp = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tikv-jemallocator = { workspace = true }
