[package]
name = "rerp_crm_livechat_impl"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "livechat"
path = "src/main.rs"
doc = false

[dependencies]
rerp_crm_livechat = { path = "../livechat" }
brrtrouter = { workspace = true }
brrtrouter_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tikv-jemallocator = { workspace = true }
rerp_common = { path = "../../common" }

# Add your additional dependencies here
