[package]
name = "rerp_helpdesk_knowledge_base_impl"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "knowledge_base"
path = "src/main.rs"
doc = false

[dependencies]
rerp_helpdesk_knowledge_base = { path = "../knowledge-base" }
brrtrouter = { workspace = true }
brrtrouter_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tikv-jemallocator = { workspace = true }
rerp_common = { path = "../../common" }

# Add your additional dependencies here
