[package]
name = "rerp_hr_attendance_impl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "attendance"
path = "src/main.rs"
doc = false

[dependencies]
rerp_hr_attendance = { path = "../attendance" }
brrtrouter = { workspace = true }
brrtrouter_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tikv-jemallocator = { workspace = true }
rerp_common = { path = "../../common" }

# Add your additional dependencies here
