[package]
name = "rerp_hr_payroll_impl"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "payroll"
path = "src/main.rs"
doc = false

[dependencies]
rerp_hr_payroll = { path = "../payroll" }
brrtrouter = { workspace = true }
brrtrouter_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tikv-jemallocator = { workspace = true }
rerp_common = { path = "../../common" }

# Add your additional dependencies here
