[package]
name = "rerp_hr_skills_impl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "skills"
path = "src/main.rs"

[dependencies]
rerp_hr_skills = { path = "../skills" }
brrtrouter = { workspace = true }
brrtrouter_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tikv-jemallocator = { workspace = true }
rerp_common = { path = "../../common" }

# Add your additional dependencies here
