[package]
name = "rerp_infrastructure_gateway_impl"
version = "0.1.3"
edition = "2021"

[[bin]]
name = "gateway"
path = "src/main.rs"
doc = false

[dependencies]
rerp_infrastructure_gateway = { path = "../gateway" }
brrtrouter = { workspace = true }
brrtrouter_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tikv-jemallocator = { workspace = true }
rerp_common = { path = "../../common" }

# Add your additional dependencies here
