[package]
name = "rerp_inventory_dropshipping_impl"
version = "0.1.2"
edition = "2021"

[[bin]]
name = "dropshipping"
path = "src/main.rs"
doc = false

[dependencies]
rerp_inventory_dropshipping = { path = "../dropshipping" }
brrtrouter = { workspace = true }
brrtrouter_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tikv-jemallocator = { workspace = true }
rerp_common = { path = "../../common" }

# Add your additional dependencies here
