[package]
name = "rerp_inventory_warehouse_impl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "warehouse"
path = "src/main.rs"

[dependencies]
rerp_inventory_warehouse = { path = "../warehouse" }
brrtrouter = { workspace = true }
brrtrouter_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tikv-jemallocator = { workspace = true }
rerp_common = { path = "../../common" }

# Add your additional dependencies here
